# Docker-Process-Isolation-Patcher

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
docker-process-isolation-patcher/: Cargo.toml
docker-process-isolation-patcher/src/: main.rs  service.rs
src/: main.rs  shared.rs
