[package]
name = "docker_process_isolation_manager"
version = "1.0.0"
edition = "2018"
authors = ["cherryleafroad"]
homepage = "https://github.com/cherryleafroad/Docker-Process-Isolation-Patcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
splitty = "0.1.0"
backtrace = "0.3.61"
log = "0.4.14"
simplelog = "0.10.0"
clap = "3.0.0-beta.4"
windows-service = "0.4.0"
human-panic = "1.0.3"
is_elevated = "0.1.2"
